Warehouse Task Implementation